@@ -48,6 +48,8 @@ Bug Fixes
   the value for any bucket with no values in the numeric field. (yonik)
 
 
+* SOLR-5129: Timeout property for waiting ZK get started. (Cao Manh Dat, Hrishikesh Gadre, Varun Thacker)
+
 ==================  7.0.0 ==================
 
 Versions of Major Components
